nav bar section with mobile responsive

--- a/index.html
+++ b/index.html
@@ -3,13 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UrbanHub</title>
+    <title>UrbanHive</title>
     <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- custom css link -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body>
+    <!-- nav section starts here -->
+
+<nav class="nav">
+    <div class="nav-container">
+        <div class="logo-container">
+            <img src="./resources/nav-image/urban-hive.png" alt="" srcset="">
+            <h3 class="urban">Urban<span class="hive">Hive</span></h3>
+        </div>
+        <div class="nav-item-container">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Products</a>
+                <a href="#" class="login-btn">
+                 Login <i class="fa-solid fa-right-to-bracket"></i>
+                </a>
+        </div>
+    </div>
+</nav>
+    <!-- nav section ends here -->
+
+    <!-- banner section starts here -->
     
+    <!-- banner section ends here -->
 </body>
 </html>
