banner section with responsive

--- a/index.html
+++ b/index.html
@@ -32,7 +32,23 @@
     <!-- nav section ends here -->
 
     <!-- banner section starts here -->
-    
+    <section class="banner-container">
+        <div class="banner-content">
+            <h3>Man Bags</h3>
+            <p>New Men's collections</p>
+            <div class="social-icon">
+                <span><i class="fa-brands fa-facebook-f" style="color: blue;"></i></span>
+                <span><i class="fa-brands fa-twitter" style="color: skyblue;"></i></span>
+                <span><i class="fa-brands fa-youtube" style="color: red;"></i></span>
+                <span><i class="fa-brands fa-instagram" style="color: darkviolet;"></i></span>
+            </div>
+            <button class="banner-btn">See More</button>
+            <button class="banner-btn">Shop Now</button>
+        </div>
+        <div class="banner-img">
+            <img src="./resources/banner-image/bag-picture.jpg" alt="" srcset="">
+        </div>
+    </section>
     <!-- banner section ends here -->
 </body>
 </html>
