products section with responsive

--- a/index.html
+++ b/index.html
@@ -29,26 +29,137 @@
         </div>
     </div>
 </nav>
-    <!-- nav section ends here -->
+<!-- nav section ends here -->
 
-    <!-- banner section starts here -->
-    <section class="banner-container">
-        <div class="banner-content">
-            <h3>Man Bags</h3>
-            <p>New Men's collections</p>
-            <div class="social-icon">
-                <span><i class="fa-brands fa-facebook-f" style="color: blue;"></i></span>
-                <span><i class="fa-brands fa-twitter" style="color: skyblue;"></i></span>
-                <span><i class="fa-brands fa-youtube" style="color: red;"></i></span>
-                <span><i class="fa-brands fa-instagram" style="color: darkviolet;"></i></span>
+<!-- banner section starts here -->
+<section class="banner-container">
+    <div class="banner-content">
+        <h3>Man Bags</h3>
+        <p>New Men's collections</p>
+        <div class="social-icon">
+            <span><i class="fa-brands fa-facebook-f" style="color: blue;"></i></span>
+            <span><i class="fa-brands fa-twitter" style="color: skyblue;"></i></span>
+            <span><i class="fa-brands fa-youtube" style="color: red;"></i></span>
+            <span><i class="fa-brands fa-instagram" style="color: darkviolet;"></i></span>
+        </div>
+        <button class="banner-btn">See More</button>
+        <button class="banner-btn">Shop Now</button>
+    </div>
+    <div class="banner-img">
+        <img src="./resources/banner-image/bag-picture.jpg" alt="" srcset="">
+    </div>
+</section>
+<!-- banner section ends here -->
+
+<!-- all products section  stars here-->
+<h3 class="all-products">All products</h3>
+<section class="product-container">
+    <div class="card">
+        <img src="./resources/products/bag.png" alt="" srcset="">
+        <div class="card-title-icon-container">
+            <h3>Product-1</h3>
+            <div class="card-icon">
+                <span><i class="fa-solid fa-cart-shopping"></i></span>
+                <span><i class="fa-regular fa-credit-card"></i></span>
+                <span><i class="fa-solid fa-eye"></i></span>
             </div>
-            <button class="banner-btn">See More</button>
-            <button class="banner-btn">Shop Now</button>
         </div>
-        <div class="banner-img">
-            <img src="./resources/banner-image/bag-picture.jpg" alt="" srcset="">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa itaque quod corporis commodi distinctio perferendis veniam consequuntur praesentium, tempora expedita!</p>
+        <p><b>Price: 500$</b></p>
+    </div>
+    <div class="card">
+        <img src="./resources/products/bag.png" alt="" srcset="">
+        <div class="card-title-icon-container">
+            <h3>Product-1</h3>
+            <div class="card-icon">
+                <span><i class="fa-solid fa-cart-shopping"></i></span>
+                <span><i class="fa-regular fa-credit-card"></i></span>
+                <span><i class="fa-solid fa-eye"></i></span>
+            </div>
         </div>
-    </section>
-    <!-- banner section ends here -->
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa itaque quod corporis commodi distinctio perferendis veniam consequuntur praesentium, tempora expedita!</p>
+        <p><b>Price: 500$</b></p>
+    </div>
+    <div class="card">
+        <img src="./resources/products/bag.png" alt="" srcset="">
+        <div class="card-title-icon-container">
+            <h3>Product-1</h3>
+            <div class="card-icon">
+                <span><i class="fa-solid fa-cart-shopping"></i></span>
+                <span><i class="fa-regular fa-credit-card"></i></span>
+                <span><i class="fa-solid fa-eye"></i></span>
+            </div>
+        </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa itaque quod corporis commodi distinctio perferendis veniam consequuntur praesentium, tempora expedita!</p>
+        <p><b>Price: 500$</b></p>
+    </div>
+    <div class="card">
+        <img src="./resources/products/bag.png" alt="" srcset="">
+        <div class="card-title-icon-container">
+            <h3>Product-1</h3>
+            <div class="card-icon">
+                <span><i class="fa-solid fa-cart-shopping"></i></span>
+                <span><i class="fa-regular fa-credit-card"></i></span>
+                <span><i class="fa-solid fa-eye"></i></span>
+            </div>
+        </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa itaque quod corporis commodi distinctio perferendis veniam consequuntur praesentium, tempora expedita!</p>
+        <p><b>Price: 500$</b></p>
+    </div>
+    <div class="card">
+        <img src="./resources/products/bag.png" alt="" srcset="">
+        <div class="card-title-icon-container">
+            <h3>Product-1</h3>
+            <div class="card-icon">
+                <span><i class="fa-solid fa-cart-shopping"></i></span>
+                <span><i class="fa-regular fa-credit-card"></i></span>
+                <span><i class="fa-solid fa-eye"></i></span>
+            </div>
+        </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa itaque quod corporis commodi distinctio perferendis veniam consequuntur praesentium, tempora expedita!</p>
+        <p><b>Price: 500$</b></p>
+    </div>
+    <div class="card">
+        <img src="./resources/products/bag.png" alt="" srcset="">
+        <div class="card-title-icon-container">
+            <h3>Product-1</h3>
+            <div class="card-icon">
+                <span><i class="fa-solid fa-cart-shopping"></i></span>
+                <span><i class="fa-regular fa-credit-card"></i></span>
+                <span><i class="fa-solid fa-eye"></i></span>
+            </div>
+        </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa itaque quod corporis commodi distinctio perferendis veniam consequuntur praesentium, tempora expedita!</p>
+        <p><b>Price: 500$</b></p>
+    </div>
+    <div class="card">
+        <img src="./resources/products/bag.png" alt="" srcset="">
+        <div class="card-title-icon-container">
+            <h3>Product-1</h3>
+            <div class="card-icon">
+                <span><i class="fa-solid fa-cart-shopping"></i></span>
+                <span><i class="fa-regular fa-credit-card"></i></span>
+                <span><i class="fa-solid fa-eye"></i></span>
+            </div>
+        </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa itaque quod corporis commodi distinctio perferendis veniam consequuntur praesentium, tempora expedita!</p>
+        <p><b>Price: 500$</b></p>
+    </div>
+    <div class="card">
+        <img src="./resources/products/bag.png" alt="" srcset="">
+        <div class="card-title-icon-container">
+            <h3>Product-1</h3>
+            <div class="card-icon">
+                <span><i class="fa-solid fa-cart-shopping"></i></span>
+                <span><i class="fa-regular fa-credit-card"></i></span>
+                <span><i class="fa-solid fa-eye"></i></span>
+            </div>
+        </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa itaque quod corporis commodi distinctio perferendis veniam consequuntur praesentium, tempora expedita!</p>
+        <p><b>Price: 500$</b></p>
+    </div>
+
+</section>
+<!-- all products section  ends here-->
 </body>
 </html>
