discount section with responsive

--- a/index.html
+++ b/index.html
@@ -158,8 +158,30 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa itaque quod corporis commodi distinctio perferendis veniam consequuntur praesentium, tempora expedita!</p>
         <p><b>Price: 500$</b></p>
     </div>
-
 </section>
 <!-- all products section  ends here-->
+
+<!-- Discount sections starts here -->
+<section class="discount-section">
+    <div class="discount-container">
+        <div class="discount-img">
+            <img src="./resources/discount/React-removebg-preview.png" alt="" srcset="">
+            <div class="discount-number">
+                30%
+            </div>
+        </div>
+        <div class="discount-text">
+            <h3>
+                30%
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, numquam!
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias nostrum, sed, architecto numquam impedit ad molestiae eligendi ipsa nemo earum sapiente fugiat rerum perferendis corporis dolore! Excepturi blanditiis odio dolor!
+            </p>
+            <button class="discout-buy-button">BUY NOW</button>
+        </div>
+    </div>
+</section>
+<!-- Discount sections ends here -->
 </body>
 </html>
