--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UrbanHive</title>
+    <!-- fav icon -->
+    <link rel="shortcut icon" href="./resources/nav-image/urban-hive.png" type="image/x-icon">
     <!-- font awesome cdn -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <!-- custom css link -->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- responsive css link -->
     <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body>
-    <!-- nav section starts here -->
+<!-- nav section starts here -->
 
 <nav class="nav">
     <div class="nav-container">
@@ -183,5 +186,84 @@
     </div>
 </section>
 <!-- Discount sections ends here -->
+
+<!-- Customer review section stars here -->
+<section class="customer-review-section">
+    <div class="customer-review-container">
+        <div class="single-review">
+            <div class="customer-info">
+                <img src="./resources/customer-picture/person.png" alt="" srcset="">
+                <h3>Mr. customer</h3>
+                <p>12/06/2022</p>
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+        </div>
+        <div class="single-review">
+            <div class="customer-info">
+                <img src="./resources/customer-picture/person.png" alt="" srcset="">
+                <h3>Mr. customer</h3>
+                <p>12/06/2022</p>
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+        </div>
+        <div class="single-review">
+            <div class="customer-info">
+                <img src="./resources/customer-picture/person.png" alt="" srcset="">
+                <h3>Mr. customer</h3>
+                <p>12/06/2022</p>
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+        </div>
+        <div class="single-review">
+            <div class="customer-info">
+                <img src="./resources/customer-picture/person.png" alt="" srcset="">
+                <h3>Mr. customer</h3>
+                <p>12/06/2022</p>
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+        </div>
+        <div class="single-review">
+            <div class="customer-info">
+                <img src="./resources/customer-picture/person.png" alt="" srcset="">
+                <h3>Mr. customer</h3>
+                <p>12/06/2022</p>
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+        </div>
+        <div class="single-review">
+            <div class="customer-info">
+                <img src="./resources/customer-picture/person.png" alt="" srcset="">
+                <h3>Mr. customer</h3>
+                <p>12/06/2022</p>
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+        </div>
+        <div class="single-review">
+            <div class="customer-info">
+                <img src="./resources/customer-picture/person.png" alt="" srcset="">
+                <h3>Mr. customer</h3>
+                <p>12/06/2022</p>
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+        </div>
+        <div class="single-review">
+            <div class="customer-info">
+                <img src="./resources/customer-picture/person.png" alt="" srcset="">
+                <h3>Mr. customer</h3>
+                <p>12/06/2022</p>
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+        </div>
+        <div class="single-review">
+            <div class="customer-info">
+                <img src="./resources/customer-picture/person.png" alt="" srcset="">
+                <h3>Mr. customer</h3>
+                <p>12/06/2022</p>
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+        </div>
+    </div>
+</section>
+<!-- Customer review section ends here -->
 </body>
 </html>
