--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <h3>Mr. customer</h3>
                 <p>12/06/2022</p>
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam!</p>
         </div>
         <div class="single-review">
             <div class="customer-info">
@@ -204,7 +204,7 @@
                 <h3>Mr. customer</h3>
                 <p>12/06/2022</p>
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam!</p>
         </div>
         <div class="single-review">
             <div class="customer-info">
@@ -212,7 +212,7 @@
                 <h3>Mr. customer</h3>
                 <p>12/06/2022</p>
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam!</p>
         </div>
         <div class="single-review">
             <div class="customer-info">
@@ -220,7 +220,7 @@
                 <h3>Mr. customer</h3>
                 <p>12/06/2022</p>
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam!</p>
         </div>
         <div class="single-review">
             <div class="customer-info">
@@ -228,7 +228,7 @@
                 <h3>Mr. customer</h3>
                 <p>12/06/2022</p>
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam!</p>
         </div>
         <div class="single-review">
             <div class="customer-info">
@@ -236,7 +236,7 @@
                 <h3>Mr. customer</h3>
                 <p>12/06/2022</p>
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam!</p>
         </div>
         <div class="single-review">
             <div class="customer-info">
@@ -244,7 +244,7 @@
                 <h3>Mr. customer</h3>
                 <p>12/06/2022</p>
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam!</p>
         </div>
         <div class="single-review">
             <div class="customer-info">
@@ -252,7 +252,7 @@
                 <h3>Mr. customer</h3>
                 <p>12/06/2022</p>
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam!</p>
         </div>
         <div class="single-review">
             <div class="customer-info">
@@ -260,10 +260,22 @@
                 <h3>Mr. customer</h3>
                 <p>12/06/2022</p>
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam! .</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam velit excepturi voluptate deleniti cumque eius dolor eum quibusdam!</p>
         </div>
     </div>
 </section>
 <!-- Customer review section ends here -->
+
+<!-- footer section starts here -->
+<footer>
+   <div class="footer-container">
+     <div class="footer-top">
+        <img src="./resources/nav-image/urban-hive.png" alt="" srcset="">
+      <h3 class="urban">Urban<span class="hive">Hive</span></h3>
+    </div>
+    <p>Buy Anything @ Shopping @ 2010-2023 Ecommerce Bangladesh</p>
+   </div>
+</footer>
+<!-- footer section ends here -->
 </body>
 </html>
